<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('due_types', function (Blueprint $table) {
            $table->id();
            $table->string('name', 50);
            $table->decimal('amount', 12, 2);
            $table->enum('billing_cycle', ['bulanan', 'fleksibel'])->default('bulanan');
            $table->softDeletes();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('due_types');
    }
};
